fixed mobile issue and spacing issue

--- a/style.css
+++ b/style.css
@@ -324,6 +324,7 @@ font-family: 'Montserrat', sans-serif;
   padding-top: 80px;
   z-index: 10;
   width: 100%;
+  padding-left: 12px;
 }
 
 .navbar-nav {
@@ -366,7 +367,7 @@ font-family: 'Montserrat', sans-serif;
 @media (max-width: 768px) {
   .homepage-name-heading > h1 {
     font-size: 300%;
-    margin-top: 70px;
+    margin-top: -100px;
     margin-bottom: -50px;
     position: absolute;
     margin-left: -115px;
@@ -377,7 +378,7 @@ font-family: 'Montserrat', sans-serif;
   }
 
   .landing-page-background {
-  height: 94%;
+  height: 88%;
   background-image: url("Photos/ivana-cajina-asuyh-_ZX54-unsplash.jpg");
   background-size: cover;
   background-position: center;
@@ -387,8 +388,12 @@ font-family: 'Montserrat', sans-serif;
   margin-bottom: 50px;
   }
 
-}
+  .homepage-middle-row {
+    position: relative;
+    margin-top: 100px;
+  }
 
+}
 
 
 .homebox {
